--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Trunk Diagnostic App</title>
 		<!-- Bootstrap -->
-		<link href="https://cdn.rawgit.com/bethsuth/Test/gh-pages/Bootstrap/bootstrap.css" rel="stylesheet">
+		<link href="TrunkApp/Bootstrap/bootstrap.css" rel="stylesheet">
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
