--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>Trunk Diagnostic App</title>
 		<!-- Bootstrap -->
 		<link href="Bootstrap/bootstrap.css" rel="stylesheet">
+		<link href="Bootstrap/bootstrap-theme.css" rel="stylesheet">
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
