--- a/index.html
+++ b/index.html
@@ -26,15 +26,12 @@
 				</p>
 			</div>
 			<div id="main" class="row">
-				<div class="col-md-6 panel panel-default" style="padding: 15px;">
-					<button id="keys" class="btn btn-link">
+					<div id="keys" class="col-md-6 btn btn-link">
 						Keys and Galleries
-					</button>
-				</div>
-				<div class="col-md-6 panel panel-default" style="padding: 15px;">
-					<button id="submitSample" class="btn btn-link">
+					</div>
+					<div id="submitSample" class="col-md-6 btn btn-link">
 						Sample Submission Aid
-					</button>
+					</div>
 				</div>
 			</div>
 		</div>
