--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 				</p>
 			</div>
 			<div id="main" class="row">
-					<div id="keys" class="col-md-6 btn btn-link">
+					<div id="keys" class="col-md-6 col-xs-12 btn btn-link">
 						Keys and Galleries
 					</div>
-					<div id="submitSample" class="col-md-6 btn btn-link">
+					<div id="submitSample" class="col-md-6 col-xs-12 btn btn-link">
 						Sample Submission Aid
 					</div>
 				</div>
